--- a/disco-server/nginx.conf
+++ b/disco-server/nginx.conf
@@ -1,157 +1,3 @@
-# rtmp {
-#   server {
-#     listen 1935;
-#     chunk_size 4096;
-
-#     application live {
-#       live on;
-#       hls on;
-#       hls_path /usr/share/nginx/html/hls;
-#       hls_fragment 3;
-#       hls_playlist_length 60s;
-#       allow publish all;
-#       allow play all;
-#     }
-#   }
-# }
-
-# http {
-#   server {
-#     listen 80;
-
-#     # CORS configuration for the whole http server
-#     if ($request_method = 'OPTIONS') {
-#       add_header 'Access-Control-Allow-Origin' '*';
-#       add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-#       add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-#       add_header 'Access-Control-Max-Age' 1728000;
-#       add_header 'Content-Type' 'text/plain; charset=utf-8';
-#       add_header 'Content-Length' 0;
-#       return 204;
-#     }
-#     add_header 'Access-Control-Allow-Origin' '*';
-#     add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-#     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-#     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-
-#     location /disco {
-#       root /usr/share/nginx/html;
-#       try_files $uri /index.html;
-#     }
-
-#     location /hls {
-#       types {
-#         application/vnd.apple.mpegurl m3u8;
-#         video/mp2t ts;
-#       }
-#       root /usr/share/nginx/html/hls;
-#       add_header Cache-Control no-cache;
-#     }
-#   }
-# }
-
-# ---
-
-# worker_processes  1;
-
-# error_log  /var/log/nginx/error.log warn;
-# pid        /var/run/nginx.pid;
-
-
-# events {
-#     worker_connections  1024;
-# }
-
-# http {
-#     server {
-#         listen       80;
-#         server_name  localhost;
-
-#         # Allow CORS
-#         add_header 'Access-Control-Allow-Origin' '*';
-#         add_header 'Access-Control-Allow-Credentials' 'true';
-#         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-#         add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-
-#         # Serve the disco-app
-#         location / {
-#             root   /usr/share/nginx/html;
-#             index  index.html index.htm;
-#         }
-
-#         # Serve HSL
-#         location /hls {
-#             types {
-#                 application/vnd.apple.mpegurl m3u8;
-#                 video/mp2t ts;
-#             }
-#             root /var/hsl;
-#             add_header Cache-Control no-cache;
-#         }
-#     }
-
-#     # RTMP server
-#     server {
-#         listen 1935;
-#         chunk_size 4096;
-
-#         application live {
-#             live on;
-#             allow publish all;
-#             allow play all;
-#             # push rtmp://backup.example.com/live;
-#         }
-#     }
-# }
-
-# ---
-
-# worker_processes 1;
-
-# events {
-#   worker_connections 1024;
-# }
-
-# rtmp {
-#   server {
-#     listen 1935;
-#     chunk_size 4096;
-
-#     application live {
-#       allow publish all;
-#       allow play all;
-#       live on;
-#     }
-#   }
-# }
-
-# ---
-
-# worker_processes 1;
-
-# events {
-#   worker_connections 1024;
-# }
-
-# rtmp {
-#   server {
-#     listen 1935;
-#     chunk_size 4096;
-
-#     application live {
-#       allow publish all;
-#       allow play all;
-#       live on;
-#       hls on;
-#       hls_path /tmp/hls;
-#       hls_fragment 5s;
-#       hls_playlist_length 60s;
-#     }
-#   }
-# }
-
-# ---
-
 worker_processes 1;
 
 events {
@@ -193,9 +39,16 @@ http {
     sendfile off;
     tcp_nopush on;
     directio 512;
+    include  /etc/nginx/mime.types;
 
     server {
         listen 80;
+
+        # CORS configuration for the whole http server
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
 
         # Serve the HLS stream to clients
         location /hls {
@@ -207,10 +60,21 @@ http {
         }
 
         # Location block to serve the disco-app
-        location /disco {
+        location / {
+            root /usr/local/nginx/html;
+            # index index.html;
+            try_files $uri /index.html;
+        }
 
-          root /usr/local/nginx/html;
-          index index.html;
+        # serve static files from the React app
+        location /static {
+            # Serve static files
+            expires max;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+            access_log off;
+
+            # Root directory for static files
+            alias /usr/local/nginx/html/static;
         }
       }
     }
